--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header') %> 
-<h1>Skillz</h1>
+<h1>Dev Skills</h1>
+<p>Using Express and Node.js to create a list of skills to learn!</p>
 
 <%- include('./partials/footer') %>
