--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,14 +6,38 @@
     <% if (typeof title !== "undefined") { %>
         <title><%= title %></title>
         <%}%>
-        <!-- this makes it so pages like the error page will still be able to use the header, bc they don't have a title. so this will only render/ask for the title if there is one. if it always asked for the title, the error page wouldn't work -->
-    <!-- could include CDN links to css framework -->
     <link rel="stylesheet" href="/stylesheets/style.css">
-                        <!-- don't forget the / before stylesheets so multiple pages can reference it -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/skills">All Skills</a>
-        <a href="/skills/new">Suggest a Skill</a>
-    </nav>
+    <!-- <nav>
+        <a class="link-offset-2" href="/">Home</a>
+        <a class="link-offset-2" href="/skills">All Skills</a>
+        <a class="link-offset-2" href="/skills/new">Suggest a Skill</a>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link"  href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/skills">All Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/skills/new">Suggest a Skill</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
