--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -5,14 +5,14 @@
     <ul>
       <% skills.forEach(function(s) { %>
         <li>
-          <form action="/skills/<%= s.ability %>?_method=DELETE"class="delete-form" method="POST">
+          <form action="/skills/<%= s.id %>?_method=DELETE"class="delete-form" method="POST">
 
             <button type="submit">X</button>
             
           </form>
          
         
-          <a href="/skills/<%=s.ability%>"><%= s.ability %></a>
+          <a href="/skills/<%=s.id%>"><%= s.ability %></a>
             - 
           <%= s.learned ? 'learned' : 'not learned' %>
          
