--- a/views/skills/edit.ejs
+++ b/views/skills/edit.ejs
@@ -2,8 +2,7 @@
 
 <h1>Edit Skill - <%=skill.ability%> </h1>
 
-<form 
-action="/skills/<%=skill.ability%>?_method=PUT" method="POST" autocomplete="off">
+<form action="/skills/<%=skill.id%>?_method=PUT" method="POST" autocomplete="off">
 
   <input type="text" name="ability" value="<%= skill.ability %>">
   <input type="checkbox" name="learned" 
