--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header') %> 
 <h1>Dev Skills</h1>
-<p>Using Express and Node.js to create a list of skills to learn!</p>
+<p>Using Express and Node.js, I created an editable list of dev skills! </p>
 
 <%- include('./partials/footer') %>
