--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
-
+<h1>Add a Skill!</h1>
 <form action="/skills" method="POST" autocomplete="off">
   <input type="text" name="ability">
   <input type="checkbox" name="learned" >
